Started Working On HW #2

--- a/part_2/handwritten_solution/handwritten_landing_solution.html
+++ b/part_2/handwritten_solution/handwritten_landing_solution.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <h1>Boom</h1>
   <title>My new landing page</title>
   <link rel="stylesheet" type="text/css" href="my_styles.css">
 </head>
