--- a/part_2/handwritten_landing.html
+++ b/part_2/handwritten_landing.html
@@ -5,7 +5,12 @@
   <link rel="stylesheet" type="text/css" href="my_styles.css">
 </head>
 <body>
-  <h1>This is my awesome product (height: 200px)</h1>
+  <div class="content-container">
+      <div class="row">
+        <div class="full-width">
+         <h1>This is my awesome product (height: 200px)</h1>
+        </div>
+    </div>
 
   <h3>What Does It Do (33%)</h3>
   <p>This is what it does. Intrigued yet?</p>
@@ -36,6 +41,8 @@
   <h3>Testimonial (25%)</h3>
   <p>It's kinda of "meh."</p>
 
+
   <footer>&#169; Our Awesome Company 2013</footer>
+  </div>
 </body>
 </html>
