--- a/part_2/handwritten_landing.html
+++ b/part_2/handwritten_landing.html
@@ -8,21 +8,29 @@
   <div class="content-container">
       <div class="row">
         <div class="full-width">
-         <h1>This is my awesome product (height: 200px)</h1>
+         <h1 class = "splash">This is my awesome product (height: 200px)</h1>
         </div>
     </div>
 
-  <h3>What Does It Do (33%)</h3>
-  <p>This is what it does. Intrigued yet?</p>
-  <a href="#">Learn More</a>
 
-  <h3>FAQ (33%)</h3>
-  <p>You've got questions. We've got answers.</p>
-  <a href="#">Go to the FAQ</a>
+  <div class="row">
+  <div class="one-third">
+    <h3>What Does It Do (33%)</h3>
+      <p>This is what it does. Intrigued yet?</p>
+      <a class="button" href="#">Learn More</a>
+  </div>
+  <div class="one-third">
+    <h3>FAQ (33%)</h3>
+    <p>You've got questions. We've got answers.</p>
+    <a class="button" href="#">Go to the FAQ</a>
+  </div>
+  <div class="one-third">
+    <h3>Purchase Now (33%)</h3>
+    <p>Convinced?</p>
+    <a class="button" href="#">Buy Now</a>
+  </div>
+  </div>
 
-  <h3>Purchase Now (33%)</h3>
-  <p>Convinced?</p>
-  <a href="#">Buy Now</a>
 
   <h3>Description (33%)</h3>
   <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
