--- a/part_2/handwritten_landing.html
+++ b/part_2/handwritten_landing.html
@@ -31,14 +31,26 @@
   </div>
   </div>
 
+<div class="row">
+  <div class="one-third">
+    <h3>Description (33%)</h3>
+    <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
+  </div>
+  <div class="two-third">
+      <img src="screenshot_2.png">
+  </div>
+</div>
 
-  <h3>Description (33%)</h3>
-  <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
-  <img src="screenshot_2.png">
-
-  <img src="screenshot_1.png">
+<div class="row">
+  <div class="two-third">
+    <img src="screenshot_1.png">
+  </div>
+  <div class="one-third">
   <h3>Description of screenshot (33%)</h3>
   <p>If you aren't convinced by this screenshot, you'll never be.</p>
+  </div>
+</div>
+
 
   <h3>Testimonial (25%)</h3>
   <p>This product changed my life!</p>
